[project]
version = "0.3.1"
build-targets = ["wheel"]
name = "hopscotch"
description = "Type-oriented registry with dependency injection."
authors = [{ name = "Paul Everitt", email = "pauleveritt@me.com" }]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pauleveritt/hopscotch"
repository = "https://github.com/pauleveritt/hopscotch"
documentation = "https://hopscotch.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
]

[tool.hatch.urls]
Changelog = "https://github.com/pauleveritt/hopscotch/releases"


[tool.hatch.envs.default]
python = "3.11"
dependencies = [
    "venusian~=3.1.0"
]
[tool.hatch.envs.test]
dependencies = [
    "pytest~=7.4.3",
    "nox~=2023.4.22",
    "safety~=2.3.5",
    "mypy~=1.7",
    "sphinx~=4.4.0",
    "sphinx-autobuild~=2021.3.14",
    "pre-commit~=3.5.0",
    "flake8~=6.1.0",
    "black~=22.1",
    "flake8-bandit~=4.1.1",
    "flake8-bugbear~=23.9.16",
    "flake8-docstrings~=1.6.0",
    "flake8-rst-docstrings~=0.3.0",
    "pep8-naming~=0.13.3",
    "darglint~=1.8.1",
    "reorder-python-imports~=3.12.0",
    "pre-commit-hooks~=4.0.1",
    "Pygments~=2.11.2",
#    "nox-poetry~=1.0.3",
    "furo~=2022.3.4",
    "myst-parser~=0.17.0",
    "sybil~=3.0.1"
]
[project.optional-dependencies]
toml = [
    "coverage~=7.3"
] # allow-prereleases = true]
colors = ["xdoctest~=1.1.2"]

[tool.coverage.run]
branch = true
source_pkgs = ["hopscotch"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.pytest.ini_options]
addopts = "-p no:doctest"
testpaths = ["tests", "examples", "docs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
