[project]
version = "0.3.1"
build-targets = ["wheel"]
name = "hopscotch"
description = "Type-oriented registry with dependency injection."
authors = [{ name = "Paul Everitt", email = "pauleveritt@me.com" }]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pauleveritt/hopscotch"
repository = "https://github.com/pauleveritt/hopscotch"
documentation = "https://hopscotch.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "venusian~=3.1.0"
]

[tool.hatch.urls]
Changelog = "https://github.com/pauleveritt/hopscotch/releases"

[tool.hatch.envs.pre-commit]
dependencies = [
    "ruff",
    "pre-commit",
    "pre-commit-hooks",
]
[tool.hatch.envs.mypy]
dependencies = [
    "mypy",
    "pytest"
]
[tool.hatch.envs.test]
dependencies = [
    "pytest~=7.4.3",
    "safety~=2.3.5",
    "mypy~=1.7",
    "sphinx~=4.4.0",
    "sphinx-autobuild~=2021.3.14",
    "pre-commit~=3.5.0",
    "pre-commit-hooks~=4.0.1",
    "Pygments~=2.11.2",
    "furo~=2022.3.4",
    "myst-parser~=0.17.0",
    "sybil~=3.0.1",
    "coverage[toml]~=7.3",
    "xdoctest[colors]~=1.1.2",
    "pytest-cov~=4.1.0",
    "ruff~=0.1.6",
]

[tool.hatch.envs.safety]
dependencies = [
    "safety"
]

[tool.hatch.envs.xdoctest]
dependencies = [
    "xdoctest[colors]~=1.1.2"
]

[tool.hatch.envs.docs-build]
dependencies = [
    "sphinx", "furo", "myst_parser"
]

[[tool.hatch.envs.test.matrix]]
python = ["3.11", "3.12"]

[[tool.hatch.envs.pre-commit.matrix]]
python = ["3.11", "3.12"]

[[tool.hatch.envs.mypy.matrix]]
python = ["3.11", "3.12"]

[[tool.hatch.envs.safety.matrix]]
python = ["3.11", "3.12"]

[[tool.hatch.envs.xdoctest.matrix]]
python = ["3.11", "3.12"]

[[tool.hatch.envs.docs-build.matrix]]
python = ["3.11", "3.12"]

[tool.coverage.run]
branch = true
source_pkgs = ["hopscotch"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.pytest.ini_options]
addopts = "-p no:doctest"
testpaths = ["tests", "examples", "docs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.test.scripts]
run = "pytest --cov-config=pyproject.toml --cov=pkg --cov=tests"
lint = "ruff check src/hopscotch tests docs/conf.py && ruff format --check src/hopscotch tests docs/conf.py"
format = "ruff check --fix src/hopscotch tests docs/conf.py && ruff format src/hopscotch tests docs/conf.py"

[tool.hatch.envs.pre-commit.scripts]
run = "pre-commit run --all-files --show-diff-on-failure"

[tool.hatch.envs.mypy.scripts]
run = "mypy src/hopscotch tests docs/conf.py"

[tool.hatch.envs.safety.scripts]
run = "hatch -e safety.py3.12 dep show requirements | safety check --full-report --stdin"

[tool.hatch.envs.xdoctest.scripts]
run = "xdoctest --modname=hopscotch --command=all --colored=1"

[tool.hatch.envs.docs-build.scripts]
run = "sphinx-build docs docs/_build"

[tool.ruff]
line-length = 88
extend-select = ['B','B9','C','D','E','F','N','S','W']
flake8-quotes = {inline-quotes = 'double', multiline-quotes = 'double'}
target-version = 'py37'
ignore = ['E203','E501','N802','B009','B010']

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.extend-per-file-ignores]
"tests/*" = ["S101"]
"examples/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
